# fh-misc2

./: .editorconfig
admin-hono-backend/: .gitignore  package.json  serverless.yml
admin-hono-backend/src/: app.ts  config.ts  main.ts  server.ts  types.ts
admin-hono-backend/src/middleware/: authentication.ts
admin-hono-backend/src/routes/: pictures.ts  regions.ts  transit-hubs.ts  vehicle-series.ts  vehicles.ts
admin-hono-backend/src/utils/: helpers.ts
admin-node-backend/: .gitignore  AUTH.md  README.md  SERVERLESS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  serverless.yml  tsconfig.json
admin-node-backend/fastify/: .gitignore  README.md  package.json  serverless.yml  tsconfig.json
admin-node-backend/fastify/src/: app.ts  types.ts
admin-node-backend/hono/: .gitignore  README.md  package.json  serverless.yml  tsconfig.json
admin-node-backend/hono/src/: app.ts  config.ts  main.ts  server.ts  types.ts
admin-node-backend/src/: app.ts  config.ts  main.ts  server.ts
admin-node-backend/src/middleware/: authentication.ts
admin-node-backend/src/routes/: carriers.ts  pictures.ts  regions.ts  transit-hubs.ts  vehicle-series.ts  vehicles.ts
aircraftNameParser/: go.mod  go.sum  main.go  manufacturers.json
java-data-parser/: build.gradle
photos-converter/: .gitignore  convert-avif.ts  convert-countries-data.ts  convert-webp.ts  convert.js  convert.ts  package.json  pnpm-lock.yaml  process-scratch.ts
python-alliances-parser/: .gitignore  main.py
rust-aircraft-parser/: .gitignore  Cargo.toml
rust-aircraft-parser/src/: main.rs
(+18 files in other folders)
